Fixed resume spacing (some more):

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -283,7 +283,8 @@ h6
 			display block
 
 		img
-			max-width 100%
+			width 100%
+			margin 0.5em auto 0
 			height auto
 
 	.section-title
@@ -480,7 +481,7 @@ h6
 				display block
 
 			img
-				max-width 46%
+				width 46%
 
 
 	#contact
